infrastructure/istio/gateway.example.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: intelligenceapi-gateway
  namespace: ns-intelligenceapi
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
