infrastructure/istio/virtualservice.example.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: intelligenceapi-virtualservices
  namespace: ns-intelligenceapi
spec:
  hosts:
  - "*"
  gateways:
  - intelligenceapi-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: intelligenceapi-gatewayapi
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-services
  namespace: ns-intelligenceapi
spec:
  host: "*.local"
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
