infrastructure/istio/ingressgateway-policy.example.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingressgateway-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
  - from:
    - source:
        remoteIpBlocks: ["0.0.0.0/0"]
